@@ -2,6 +2,9 @@
 
 	* tests/rwblob.c and rwfile.c: Write the reason for FAIL in
 	test-suite.log.
+	* magick/image.h: Revised table of image orientations to show
+	Exif ImageOrientation values (which happen to be the same as
+	the enum values 1 to 8).
 
 2017-08-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
